# spz_rs

./: .gitmodules  Cargo.toml  LICENSE  README.md
examples/: simple_read.rs
src/: lib.rs
